# anari-visionaray

./: .gitignore  CMakeLists.txt  DeviceArray.h  DeviceBVH.h  DeviceCopyableObjects.h  DeviceObjectArray.h  DeviceObjectRegistry.h  Object.cpp  Object.h  README.md  RenderingSemaphore.h  TimeStamp.cpp  TimeStamp.h  VisionarayCUDADeviceQueries.cpp  VisionarayCUDADeviceQueries.h  VisionarayDevice.cpp  VisionarayDevice.h  VisionarayDeviceDebugFactory.cpp  VisionarayDeviceQueries.cpp  VisionarayDeviceQueries.h  VisionarayGlobalState.cpp  VisionarayGlobalState.h  VisionarayHIPDeviceQueries.cpp  VisionarayHIPDeviceQueries.h  VisionarayLibrary.cpp  common.h  for_each.h  sampleCDF.h  visionaray_cuda_device.json  visionaray_device.json  visionaray_hip_device.json  vsnray_camera_matrix.json  vsnray_renderer_clip_plane.json  vsnray_sampler_volume.json
.github/workflows/: anari-visionaray-ci.yml
apps/: AnariCamera.cpp  AnariCamera.h  TiltShiftCamera.cpp  TiltShiftCamera.h  brdfDebugger.cpp  viewer.cpp
array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ObjectArray.cpp  ObjectArray.h
camera/: Camera.cpp  Camera.h  Matrix.cpp  Matrix.h  Omnidirectional.cpp  Omnidirectional.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h
frame/: Frame.cpp  Frame.cu  Frame.h  Frame.hip  common.h  for_each.h  renderFrame.cpp  renderFrame.cu  renderFrame.h  renderFrame_DirectLight.cpp  renderFrame_DirectLight.cu  renderFrame_Raycast.cpp  renderFrame_Raycast.cu
renderer/: AO.h  DDA.h  DirectLight.cpp  DirectLight.h  DirectLight_impl.cpp  DirectLight_impl.cu  DirectLight_impl.h  DirectLight_impl.hip  Pathtracer_impl.h  Raycast.cpp  Raycast.h  Raycast_impl.cpp  Raycast_impl.cu  Raycast_impl.h  Raycast_impl.hip  Renderer.cpp  Renderer.h  VolumeIntegration.h  common.h
scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  MotionTransform.cpp  MotionTransform.h  VisionarayScene.cpp  VisionarayScene.h  VisionarayScene.hip  VisionaraySceneGPU.cu  VisionaraySceneGPU.h  VisionaraySceneGPU.hip  VisionaraySceneSYCL.cpp  World.cpp  World.h
scene/light/: Directional.cpp  Directional.h  HDRI.cpp  HDRI.h  Light.cpp  Light.h  Point.cpp  Point.h  Quad.cpp  Quad.h  Spot.cpp  Spot.h
scene/surface/: Surface.cpp  Surface.h  common.h
scene/surface/geometry/: BezierCurve.cpp  BezierCurve.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Geometry.cpp  Geometry.h  ISOSurface.cpp  ISOSurface.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
scene/surface/material/: Material.cpp  Material.h  Matte.cpp  Matte.h  PBM.cpp  PBM.h
scene/surface/material/sampler/: Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h  PrimitiveSampler.cpp  PrimitiveSampler.h  Sampler.cpp  Sampler.h  TransformSampler.cpp  TransformSampler.h  VolumeSampler.cpp  VolumeSampler.h  common.h
scene/volume/: Blackbody.cpp  Blackbody.h  TransferFunction1D.cpp  TransferFunction1D.h  Volume.cpp  Volume.h
scene/volume/spatial_field/: BezierHex.h  BlockStructuredField.cpp  BlockStructuredField.cu  BlockStructuredField.h  Connectivity.cpp  Connectivity.h  GridAccel-common.h  GridAccel.cpp  GridAccel.cu  GridAccel.h  HigherOrder.h  NanoVDBField.cpp  NanoVDBField.cu  NanoVDBField.h  Plane.h  SpatialField.cpp  SpatialField.h  StructuredRegularField.cpp  StructuredRegularField.h  UElemGrid.h  UElems.h  UnstructuredField.cpp  UnstructuredField.cu  UnstructuredField.h
